--- a/memory_benchmark/package.xml
+++ b/memory_benchmark/package.xml
@@ -10,12 +10,10 @@
   <buildtool_depend>ament_cmake</buildtool_depend>
 
   <build_depend>rclcpp</build_depend>
-  <build_depend>std_msgs</build_depend>
+  <build_depend>benchmark_interfaces</build_depend>
 
   <exec_depend>rclcpp</exec_depend>
   <exec_depend>rosidl_default_runtime</exec_depend>
-
-  <depend>benchmark_interfaces</depend>
 
   <export>
     <build_type>ament_cmake</build_type>
